# docleaf

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  LICENSES_THIRD_PARTY.md  README.md  build.sh  justfile  pyproject.toml
.github/workflows/: build.yml
breathe/: __init__.py
commercial/: LICENSE.md  README.md
documentation/source/: conf.py  functions.rst  index.rst  verbatim.rst  xrefsect.rst
examples/class_methods/: Doxyfile  example.h
examples/code/: rebuild.sh
examples/code/class_methods/: Doxyfile
examples/code/classes/: example.hpp
examples/code/enums/: example.hpp
examples/code/enums-c/: example.h
examples/code/functions/: example.hpp
examples/code/groups/: example.hpp
examples/code/groups-c/: example.h
examples/code/html-only/: example.hpp
examples/code/includes-c/: example.h
examples/code/lists/: Doxyfile  example.h  example.hpp
examples/code/nutshell/: Doxyfile  nutshell.h  nutshell.hpp
examples/code/paragraphs/: Doxyfile  example.h  example.hpp
examples/code/preformatted/: example.h  example.hpp
examples/code/program-listings/: example.hpp
examples/code/structs/: Doxyfile  example.h
examples/code/structs-c/: example.h
examples/code/tables/: example.h  example.hpp
examples/code/urls/: example.h  example.hpp
examples/code/verbatim/: Doxyfile
examples/code/xrefsect/: Doxyfile  example.h
examples/functions/: Doxyfile  example.h
examples/groups/: example.h
examples/html-only/: example.h
examples/lists/: example.h
examples/nutshell/: nutshell.cfg
examples/program-listings/: example.h
examples/references/: example.h
examples/sphinx/: Makefile
examples/sphinx/source/: class.rst  conf.py  defines.rst  enum.rst  functions.rst  groups.rst  htmlonly.rst  index.rst  lists.rst  notes.rst  paragraphs.rst  preformatted.rst  program-listings.rst  references.rst  struct.rst  tables.rst  text-formatting.rst  urls.rst  verbatim.rst
examples/text-formatting/: example.h
examples/urls/: Doxyfile
examples/verbatim/: example.h
rust/: Cargo.toml  build.rs  generate.py
rust/crates/xsd-codegen/: Cargo.toml
rust/crates/xsd-codegen/src/: lib.rs
rust/scripts/: licenses.py
rust/src/: cache.rs  generate.py  lib.rs  nodes.rs  xml.rs
rust/src/doxygen/: graph.rs  index.rs  mod.rs  nodes.rs  render.rs  text.rs
rust/src/doxygen/compound/: class_nutshell.xml  elements.rs  mod.rs
rust/src/doxygen/compound/snapshots/: backend__doxygen__compound__test__parse_nutshell.snap
rust/src/doxygen/index/: elements.rs
rust/xsd/: compound.xsd
scripts/: fresh.sh  release.py
src/: generate.py  lib.rs  nodes.rs  xml.rs
src/breathe_plus/: __init__.py  copied.py  domains.py  doxygen.py
src/docleaf/: copied.py  domains.py  doxygen.py  errors.py
src/doxygen/: compound.rs  index.rs  mod.rs  render.rs
src/doxygen/compound/: elements.rs  mod.rs
src/doxygen/snapshots/: backend__doxygen__compound__test__parse_nutshell.snap
