[package]
name = "breathe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "backend"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.65"
env_logger = "0.9.0"
log = "0.4.17"
pyo3 = { version = "0.16.5", features = ["anyhow", "extension-module"] }
quick-xml = { version = "0.27.1", features = ["serde", "serialize"] }
serde = { version = "1.0.144", features = ["derive"] }
vec1 = "1.10.1"

[dev-dependencies]
insta = "1.26.0"
pretty_assertions = "1.3.0"
