[project]
name = "breathe_plus"
version = "0.1.0a1"
description = "Integrate your doxygen-generated technical documentation into Sphinx"
license = { file = "LICENSE.md" }
readme = "README.md"
authors = [
    { name = "Michael Jones" }
]
dependencies = [
    "docutils>=0.12",
    "Sphinx>=4.0,<6,!=5.0.0"
]

[project.urls]
repository = "https://github.com/breathe-doc/breathe-plus"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
python-source = "src"
manifest-path = "rust/Cargo.toml"

[tool.black]
line-length = 100
extend-exclude = '''
^/breathe/parser/.*
'''

# Poetry - used for dev and must be kept in sync with the top sections until we abandon it or they update to 
# support the use of the main [project] and dependencies information
[tool.poetry]
name = "breathe_plus"
version = "0.1.0a1"
description = "Integrate your doxygen-generated technical documentation into Sphinx"
license = "Parity-7.0.0"
readme = "README.md"
authors = [
    "Michael Jones"
]

[tool.poetry.dependencies]
python = "^3.8"
docutils = ">=0.12"
Sphinx = ">=4.0,<6,!=5.0.0"

[tool.poetry.group.dev.dependencies]
maturin = "^0.14.14"
flake8 = "^5.0.4"
pytest = "^7.1.3"
mypy = ">=0.900"
types-docutils = ">=0.14,<0.18"
types-Pygments = "^2.13.0"
black = "22.3.0"
