[project]
name = "docleaf"
version = "0.8.2"
description = "Integrate your doxygen-generated technical documentation into Sphinx"
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.7"
keywords = ["sphinx", "doxygen"]
authors = [
    { name = "Michael Jones", email = "michael.jones@docleaf.io" }
]
dependencies = [
    "docutils>=0.12",
    "Sphinx>=4.0,!=5.0.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx :: Extension",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
]

[project.urls]
homepage = "https://docleaf.io"
repository = "https://github.com/docleaf-labs/docleaf"
changelog = "https://github.com/docleaf-labs/docleaf/blob/main/CHANGELOG.md"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "docleaf.backend"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
python-source = "src"
manifest-path = "rust/Cargo.toml"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

# Poetry - used for dev and must be kept in sync with the top sections until we abandon it or they update to 
# support the use of the main [project] and dependencies information
[tool.poetry]
name = "docleaf"
version = "0.8.2"
description = "Integrate your doxygen-generated technical documentation into Sphinx"
license = "Parity-7.0.0"
readme = "README.md"
homepage = "https://docleaf.io"
keywords = ["sphinx", "doxygen"]
authors = [
    "Michael Jones <michael.jones@docleaf.io>"
]

[tool.poetry.dependencies]
python = "^3.8"
docutils = ">=0.12"
Sphinx = ">=4.0,!=5.0.0"

[tool.poetry.group.dev.dependencies]
maturin = "^0.14.14"
flake8 = "^5.0.4"
pytest = "^7.1.3"
mypy = ">=0.900"
types-docutils = ">=0.14,<0.18"
types-Pygments = "^2.13.0"
black = ">=22.3.0"
ruff = "^0.0.278"
