[package]
name = "docleaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "backend"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.65"
env_logger = "0.9.0"
html-escape = "0.2.13"
itertools = "0.10.5"
pyo3 = { version = "0.16.5", features = ["anyhow", "extension-module"] }
quick-xml = { version = "0.27.1", features = ["serde", "serialize"] }
roxmltree = "0.18.0"
serde = { version = "1.0.144", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
vec1 = "1.10.1"

[dev-dependencies]
insta = "1.26.0"
pretty_assertions = "1.3.0"

[build-dependencies]
anyhow = "1.0.65"
xsd-codegen = { path = "./crates/xsd-codegen" }
